<resources>
    <string name="app_name">ColorGame</string>
    <string name="pressToStart">Press to start</string>
    <string name="enterValues">Введите параметры поля:</string>
    <string name="len">Length: </string>
    <string name="width">Width: </string>
    <string name="textviewRandom">Random field\'s color</string>
    <string name="x_preset">4</string>
    <string name="y_preset">4</string>
</resources>
